--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
+#  pedantic: any
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
